--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"axios": "^0.16.2",
 		"native-base": "^2.3.0",
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.46.4"
+		"react-native": "0.46.4",
+		"react-redux": "^5.0.5",
+		"react-router-native": "^4.1.1",
+		"redux": "^3.7.2",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
