--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@expo/vector-icons": "^5.0.0",
 		"axios": "^0.16.2",
-		"native-base": "^2.3.0",
-		"react": "16.0.0-alpha.12",
-		"react-native": "0.46.4",
+		"native-base": "2.1.5",
+		"react": "16.0.0-alpha.6",
+		"react-native": "0.44.0",
 		"react-redux": "^5.0.5",
 		"react-router-native": "^4.1.1",
 		"redux": "^3.7.2",
+		"redux-devise-axios": "^0.0.2",
 		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
